--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "lite": "lite-server",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "prod": "gulp prod"
   },
   "dependencies": {
     "@angular/common": "~2.2.0",
@@ -30,7 +31,14 @@
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-shell": "^0.5.2",
     "lite-server": "^2.2.2",
+    "run-sequence": "^1.2.2",
+    "systemjs-builder": "^0.15.34",
+    "systemjs-plugin-text": "0.0.9",
     "typescript": "^2.0.3"
   },
   "author": "Pavel Kovalyov <pavlo.kovalyov@gmail.com>",
